--- a/Styles/index.css
+++ b/Styles/index.css
@@ -8,3 +8,28 @@
     background-size: 30px 30px;
     background-position: -5px -5px
   }
+  .top-panel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 75px;
+    background-color: #333;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+  }
+  .top-panel .profile-icon {
+    width: 30px;
+    height: 30px;
+    /*background-image: url('/Styles/img/user.png'); /* Замените на путь к вашей иконке */
+    background-image: url('../Styles/img/user.png'); /* Замените на путь к вашей иконке */
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    cursor: pointer;
+  }
