--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,8 +1,6 @@
-/* From Uiverse.io by kennyotsu */ 
 .container {
     width: 100%;
     height: 100%;
-    /* Add your background pattern here */
     background-color: #313131;
     background-image: radial-gradient(rgba(255, 255, 255, 0.171) 2px, transparent 0);
     background-size: 30px 30px;
@@ -19,11 +17,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px;
+    padding: 0 15px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     z-index: 1000;
   }
   .top-panel .profile-icon {
+    margin-right: 40px;
     width: 30px;
     height: 30px;
     /*background-image: url('/Styles/img/user.png'); /* Замените на путь к вашей иконке */
@@ -32,4 +31,13 @@
     background-position: center;
     border-radius: 50%;
     cursor: pointer;
+    
+  }
+
+
+    .custom-font {
+    font-family: 'Arial', sans-serif; /* Укажите нужный шрифт */
+    font-size: 30px; /* Размер шрифта */
+    font-weight: bold; /* Жирность текста */
+    color: #ffffff; /* Цвет текста */
   }
