--- a/Styles/index.css
+++ b/Styles/index.css
@@ -74,4 +74,6 @@ input:hover {
 .section-title {
   text-align: center; /* Центрирование текста */
   font-weight: bold; /* Жирный текст */
+  font-family: 'Arial', sans-serif; 
+  color: white;
 }
