--- a/Styles/index.css
+++ b/Styles/index.css
@@ -91,7 +91,7 @@ input:hover {
   background: white;
   border: 1px solid #ddd;
   border-radius: 5px;
-  padding: 15px;
+  padding: 5px;
   text-align: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   width: calc(33.333% - 20px);
@@ -122,29 +122,24 @@ input:hover {
   background-color: #218838;
 }
 .navbar {
-  margin-bottom: 20px;
+  margin-bottom: 5px;
+  text-align: center;
 }
-.dropdown {
-  position: relative;
-  display: inline-block;
+.nav-links {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
+.nav-links a {
   text-decoration: none;
-  display: block;
+  color: white;
+  font-weight: bold;
+  padding: 10px 15px;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  transition: background-color 0.3s, border-color 0.3s;
 }
-.dropdown-content a:hover {
-  background-color: #f1f1f1;
+.nav-links a:hover {
+  background-color: #555;
+  border-color: white;
 }
