--- a/Styles/index.css
+++ b/Styles/index.css
@@ -33,6 +33,17 @@
     cursor: pointer;
     
   }
+  .top-panel .cart-icon {
+    margin-right: -430px;
+    width: 30px;
+    height: 30px;
+    /*background-image: url('/Styles/img/user.png');*/
+    background-image: url('../Styles/img/cart.png'); 
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+    
+  }
 
 
     .custom-font {
