fixed cart + added footer

--- a/Styles/cart.css
+++ b/Styles/cart.css
@@ -96,8 +96,24 @@
     transition: background-color 0.3s;
     display: block;
     margin: 0 auto;
+    margin-top: 5px;
 }
 
 .checkout-button:hover {
     background-color: #0056b3;
 }
+
+.continue-shopping {
+    background-color: #007bff; /* Цвет фона */
+    color: white; /* Цвет текста */
+    border: none; /* Убирает рамку */
+    padding: 10px 20px; /* Отступы */
+    border-radius: 5px; /* Закругленные углы */
+    cursor: pointer; /* Указатель при наведении */
+    transition: background-color 0.3s; /* Плавный переход цвета */
+}
+
+.continue-shopping:hover {
+    background-color: #0056b3; /* Цвет фона при наведении */
+}
+
