--- a/Styles/index.css
+++ b/Styles/index.css
@@ -62,6 +62,7 @@
   .top-panel .cart-icon {
     width: 30px;
     height: 30px;
+    margin-right: 10px;
     position: relative;
     /*background-image: url('/Styles/img/user.png');*/
     background-image: url('../Styles/img/cart.png'); 
